add new website from server na

--- a/xem-phim-moi/cuu-long-thanh-trai-vay-thanh/index.html
+++ b/xem-phim-moi/cuu-long-thanh-trai-vay-thanh/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1777,40 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/91-ngay" title="91 Ngày">
+          <a class="list-top-movie-link" href="/phim-moi/ba-chi-em-dung-cam" title="Ba Chị Em Dũng Cảm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/91-ngay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-chi-em-dung-cam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             91 Ngày
+             Ba Chị Em Dũng Cảm
             </span>
             <span class="list-top-movie-item-en">
-             91 Days
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tim-lai-nguoi-yeu-dau" title="Tìm Lại Người Yêu Dấu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tim-lai-nguoi-yeu-dau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tìm Lại Người Yêu Dấu
-            </span>
-            <span class="list-top-movie-item-en">
-             Rogue Heros
+             Three Siblings Bravely
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1821,18 +1799,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tho-san-quai-vat-2018" title="Thợ săn quái vật (2018)">
+          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-o-trang-trai-tam-gui" title="Giáng sinh ở trang trại tầm gửi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-san-quai-vat-2018-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-o-trang-trai-tam-gui-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thợ săn quái vật (2018)
+             Giáng sinh ở trang trại tầm gửi
             </span>
             <span class="list-top-movie-item-en">
-             Monster Hunter
+             Christmas on Mistletoe Farm
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhat-ky-cua-sara" title="Nhật Ký Của Sara">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-ky-cua-sara-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhật Ký Của Sara
+            </span>
+            <span class="list-top-movie-item-en">
+             Sara's Notebook
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1843,21 +1843,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-cung-phong-cua-toi-la-gumiho" title="Bạn Cùng Phòng Của Tôi Là Gumiho">
+          <a class="list-top-movie-link" href="/phim-moi/hen-gap-tu-than" title="Hẹn gặp tử thần">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-cung-phong-cua-toi-la-gumiho-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hen-gap-tu-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạn Cùng Phòng Của Tôi Là Gumiho
+             Hẹn gặp tử thần
             </span>
             <span class="list-top-movie-item-en">
-             My Roommate is a Gumiho
+             Meet Joe Black
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1865,21 +1865,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tengen-toppa-gurren-lagann-ban-dien-anh-anh-sang-tren-bau-troi-la-nhung-vi-sao" title="Tengen Toppa Gurren Lagann bản điện ảnh – Ánh sáng trên bầu trời là những vì sao">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ke-song-sot" title="Những Kẻ Sống Sót">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tengen-toppa-gurren-lagann-ban-dien-anh-anh-sang-tren-bau-troi-la-nhung-vi-sao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ke-song-sot-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tengen Toppa Gurren Lagann bản điện ảnh – Ánh sáng trên bầu trời là những vì sao
+             Những Kẻ Sống Sót
             </span>
             <span class="list-top-movie-item-en">
-             劇場版 天元突破グレンラガン 螺巌篇
+             Left Behind
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
