add new website from server na

--- a/xem-phim-moi/ultraman-troi-day/index.html
+++ b/xem-phim-moi/ultraman-troi-day/index.html
@@ -1203,7 +1203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1760,18 +1760,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-gai-toi-la-mot-chu-meo" title="Bạn Gái Tôi Là Một Chú Mèo">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-xa-van-kiep" title="Tình Xa Vạn Kiếp">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-gai-toi-la-mot-chu-meo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-xa-van-kiep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạn Gái Tôi Là Một Chú Mèo
+             Tình Xa Vạn Kiếp
             </span>
             <span class="list-top-movie-item-en">
-             My Cat-astrophic Lover
+             Tang Dynasty Tour
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1782,18 +1782,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/to-tong-than-yeu-cua-toi" title="Tổ Tông Thân Yêu Của Tôi">
+          <a class="list-top-movie-link" href="/phim-moi/yeu-em-khi-gap" title="Yêu em khi gặp">
            <span class="status">
-            HD Vietsub + Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-tong-than-yeu-cua-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-em-khi-gap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tổ Tông Thân Yêu Của Tôi
+             Yêu em khi gặp
             </span>
             <span class="list-top-movie-item-en">
-             Hello Dear Ancestors
+             Love You When Encounter
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1804,40 +1804,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-co-doi" title="Giáng Sinh Có Đôi">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-nguoi-ban-phan-4" title="Những người bạn (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-co-doi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nguoi-ban-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giáng Sinh Có Đôi
+             Những người bạn (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             All I Want For Christmas
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tho-san-xac-song" title="Thợ Săn Xác Sống">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tho-san-xac-song-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thợ Săn Xác Sống
-            </span>
-            <span class="list-top-movie-item-en">
-             Juan of the Dead
+             Friends (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1848,21 +1826,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/may-lam-tinh-18-tuoi" title="Máy Làm Tình 18 Tuổi">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-doi-tran-chien-nhung-ke-khong-lo" title="Người Dơi: Trận Chiến Những Kẻ Khổng Lồ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/may-lam-tinh-18-tuoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-doi-tran-chien-nhung-ke-khong-lo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Máy Làm Tình 18 Tuổi
+             Người Dơi: Trận Chiến Những Kẻ Khổng Lồ
             </span>
             <span class="list-top-movie-item-en">
-             18 Years Old Sex Machine
+             Batman Unlimited: Mechs vs. Mutants
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bullbuster" title="BULLBUSTER">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bullbuster-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             BULLBUSTER
+            </span>
+            <span class="list-top-movie-item-en">
+             ブルバスター
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
